K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calico-go-project-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calico-go-project
  template:
    metadata:
      labels:
        app: calico-go-project
    spec:
      containers:
        - name: calico-go-project
          image: nsahil992/calico-go-project:v1
          ports:
            - containerPort: 8080
          resources:
              limits:
                memory: "512Mi"
                cpu: "500m"
