K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calico-go-project-service
spec:
  type: NodePort
  selector:
    app: calico-go-project
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
