K8s/calico-network-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
  namespace: default
spec:
  selector: app == "db"
  ingress:
    - action: Allow
      source:
        selector: app == "backend"
